--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@fortawesome/free-regular-svg-icons": "^5.14.0",
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.7",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
