--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "nodemon": "^2.0.7"
   },
   "scripts": {
-    "start": "nodemon --watch backend --exec babel-node backend/server.js"
+    "start": "nodemon --watch backend --exec ./node_modules/.bin/babel-node backend/server.js"
   },
   "repository": {
     "type": "git",
